# datasette-auth-github

./: .gitignore  Justfile  README.md  datasette_auth_github.py  pyproject.toml  setup.py  test_asgi_auth_github.py  test_datasette_auth_github.py
.circleci/: config.yml
.github/workflows/: publish.yml  test.yml
asgi_auth_github/: __init__.py
datasette_auth_github/: __init__.py  github_auth.py  google_auth.py  utils.py  views.py
datasette_auth_github/templates/: datasette_auth_github_error.html
templates/: base.html
tests/: test_datasette_auth_github.py
